# myxmlpp

./: .gitignore  AttributeNotFoundException_8cpp_source.html  AttributeNotFoundException_8hpp_source.html  Attribute_8cpp_source.html  Attribute_8hpp_source.html  Attribute__getValueBool_8cpp_source.html  Attribute__getValueFloat_8cpp_source.html  Attribute__getValueInt_8cpp_source.html  Attribute__getValue_8cpp_source.html  CMakeLists.txt  Doc_8cpp_source.html  Doc_8hpp_source.html  Doxyfile  Exception_8cpp_source.html  Exception_8hpp_source.html  FileException_8cpp_source.html  FileException_8hpp_source.html  IllegalValueException_8cpp_source.html  IllegalValueException_8hpp_source.html  NoFileException_8cpp_source.html  NoFileException_8hpp_source.html  NodeNotFoundException_8cpp_source.html  NodeNotFoundException_8hpp_source.html  Node_8cpp_source.html  Node_8hpp_source.html  Node__addChild_8cpp_source.html  Node__attribute_8cpp_source.html  Node__children_8cpp_source.html  Node__findAttribute_8cpp_source.html  Node__findChildBySPath_8cpp_source.html  Node__findChildrenBySPath_8cpp_source.html  Node__getSet_8cpp_source.html  Node__parseUtils_8cpp_source.html  Node__popChildByPath_8cpp_source.html  Node__popChildrenByPath_8cpp_source.html  Node__rmChildByPath_8cpp_source.html  Node__rmChildR_8cpp_source.html  Node__rmChild_8cpp_source.html  Node__rmChildrenByPath_8cpp_source.html  Node__rmChildrenR_8cpp_source.html  (+105 more)
tests/: CMakeLists.txt  test.cpp
tests/unit-testing/Attribute/: Attribute_getValue.cpp  Attribute_getValueBool.cpp  Attribute_getValueFloat.cpp  (+1 more)
(+70 files in other folders)
